# life-vault

./: .gitignore  README.md  package-lock.json  package.json
life-vault/: Cargo.toml  abi.json
life-vault-ui/: package-lock.json  package.json
life-vault-ui/app/: layout.tsx  page.tsx  providers.tsx
life-vault/src/: lib.rs  main.rs
