[package]
name = "life-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "=0.6.0"
mini-alloc = "0.4.2"

# --- THE NUCLEAR PINNING ---
# We force every layer of the stack to 0.7.6
alloy-sol-types = "=0.7.6"
alloy-primitives = "=0.7.6"
alloy-sol-macro = "=0.7.6"
alloy-sol-macro-expander = "=0.7.6" # The hidden culprit
alloy-sol-macro-input = "=0.7.6"    # Its accomplice

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"